--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
          
          <h1>CITRUS</h1>
         
@@ -39,7 +39,7 @@
     </main>
 
 
-    <footer>
+    <footer class="footer">
         <div class="footer">
         <h4><u>Esta página fue realizada por Mariana S. Velázquez</u></h4></div>
     </footer>
